# api-against-ransomware

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/ss_bt_automation/: __init__.py  __main__.py  beyondtrust.py  circuit_breaker.py  config.py  email_notifier.py  http_utils.py  main.py  metrics.py  models.py  orchestrator.py  securitysnares.py  store.py
src/ss_bt_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_fqdn_candidates.py  test_models.py
