[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ss-bt-automation"
version = "0.1.0"
description = "SecuritySnares ransomware alerts -> BeyondTrust Password Safe rotation + email fallback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "APScheduler==3.10.4",
  "tenacity==9.0.0",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ss-bt-automation = "ss_bt_automation.main:main"

[tool.setuptools.packages.find]
where = ["src"]
